GEOMESA-3521 Add Arrow Java --opens to CLI tools